# ResponsibleAI_projects

./: .gitignore  README.md  exercise.ipynb  pyproject.toml  requirements.txt
Fairness_project/: .gitignore  README.md
Fairness_project/analysis/: plot.py
PredictiveXAI_project/: .gitignore  create_plots.py  prepare_data.py  train.py  train_job.sh
PredictiveXAI_project/ppnet/: alignment_analysis.py  global_analysis.py  local_analysis.py  prune.py  train_and_test.py
