[project]
name = "responsibleai-projects"
version = "0.1.0"
description = "Responsible AI Projects"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fairlearn>=0.13.0",
    "gdown>=5.2.0",
    "huggingface-hub>=1.1.4",
    "ipykernel>=7.1.0",
    "llama-cpp-python>=0.3.16",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.9.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
]
